# fastapi_stock_prediction

./: .env  .env.example  .gitignore  ARCHITECTURE.md  BACKGROUND_PROCESSOR_GUIDE.md  COMPARISON.md  DATA_FLOW_EXPLAINED.md  DATA_UPDATE_LOGIC.md  DEPLOYMENT.md  Dockerfile  FIXES_APPLIED.md  LIVE_DATA_FETCHING_LOGIC.md  LIVE_DATA_REFRESH_EXPLAINED.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_GUIDE.md  PACKAGE_DETAILS.md  PROCESSING_METADATA_EXPLAINED.md  QUICKSTART.md  QUICKSTART_OPTIMIZED.md  README.md  README_FINAL.md  REFRESH_LOGIC_SUMMARY.md  SETUP_COMPLETE.md  SETUP_INSTRUCTIONS.md  SQLALCHEMY_MIGRATION.md  STRUCTURE_SUMMARY.md  WHY_6_SECOND_REFRESH.md  alembic.ini  docker-compose.yml  main.py  options_data.db  pyproject.toml  requirements.txt  run.sh  test_upload.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py  5a431f748304_add_timestamps_to_processing_metadata.py
app/: __init__.py
app/api/v1/: router.py
app/api/v1/endpoints/: background.py  data_processing.py  stocks.py  upload.py
app/core/: config.py  database.py  database_sqlalchemy.py
app/models/: base.py  schemas.py  stock_models.py
app/services/: background_processor.py  data_processor.py  excel_utils.py  stock_service.py
static/: style.css
templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_services.py
